--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,16 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.6</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.3.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.39</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
